src/snapshots/rlox__parse__tests__floating_expr.snap
---
source: src/parse.rs
expression: stderr
---
Error: Parse error
   ╭─[<unknown>:?:?]
   │
 1 │ 1;
   │ ┬  
   │ ╰── Expected statement
───╯

