src/snapshots/rlox__parse__tests__invalid_token.snap
---
source: src/parse.rs
expression: stderr
---
Error: Lexing error
   ╭─[<unknown>:?:?]
   │
 1 │ print $;
   │       ┬  
   │       ╰── Invalid token
───╯

