src/snapshots/rlox__parse__tests__missing_lhs.snap
---
source: src/parse.rs
expression: "crate::util::mock_interpret(\"print + 1;\\n\")"
---
stdout:


stderr:
Error: Parse error
   ╭─[<unknown>:?:?]
   │
 1 │ print + 1;
   │       ┬  
   │       ╰── Expected primary
───╯


