src/snapshots/rlox__parse__tests__missing_primary.snap
---
source: src/parse.rs
expression: stderr
---
Error: Parse error
   ╭─[<unknown>:?:?]
   │
 1 │ print ();
   │        ┬  
   │        ╰── Expected primary
───╯

