src/snapshots/rlox__parse__tests__missing_rhs.snap
---
source: src/parse.rs
expression: stderr
---
Error: Parse error
   ╭─[<unknown>:1:13]
   │
 1 │ print 1 + ;
   │           ┬  
   │           ╰── Expected primary
───╯

