src/snapshots/rlox__parse__tests__remaining_tokens.snap
---
source: src/parse.rs
expression: "crate::util::mock_interpret(\"print 1; x\")"
---
stdout:


stderr:
Error: Parse error
   ╭─[<unknown>:?:?]
   │
 1 │ print 1; x
   │          ┬  
   │          ╰── Expected statement
───╯


