src/snapshots/rlox__parse__tests__snap_bytecode.snap
---
source: src/parse.rs
expression: res
---
==== test ====
0000 1       CONSTANT            0 '1'
0002 2       CONSTANT            1 '2'
0004 /       DIVIDE
0005 2       CONSTANT            2 '2'
0007 *       MULTIPLY
0008 print   PRINT
0009         RETURN

